--- a/config.env
+++ b/config.env
@@ -1,8 +1,7 @@
 NODE_ENV=development
-PORT=8822
-DATABASE=mongodb+srv://jonas:<PASSWORD>@cluster0-pwikv.mongodb.net/nacourses?retryWrites=true
-DATABASE_LOCAL=mongodb://localhost:27017/nacourses
-DATABASE_PASSWORD=On0adDgBCE5ECWh6
+PORT=8000
+DATABASE=mongodb+srv://db_admin:<password>@ift458.dxmrpad.mongodb.net/loanapp
+DATABASE_PASSWORD=P%40ssw0rd!
 
 JWT_SECRET=my-ultra-secure-and-ultra-long-secret
 JWT_EXPIRES_IN=90d
